# cmake_sample_win_mac_linux

./: CMakeLists.txt  README.md  create_codelite_workspace.sh  create_vs_solution.bat  create_xcode_project.sh  main.cpp
